commit with kafka routes ok, but mongodb route not

--- a/camel-quarkus-kafka-api/src/main/resources/application.properties
+++ b/camel-quarkus-kafka-api/src/main/resources/application.properties
@@ -1,11 +1,18 @@
 #
 # Kafka Configuration
 #
-kafka.bootstrap.servers=${KAFKA_BOOTSTRAP_SERVERS:localhost}:9092
+kafka.bootstrap.servers=${KAFKA_BOOTSTRAP_SERVERS:10.8.109.244}:9092
 kafka.topic=${KAFKA_TOPIC:products}
+#
+# MongoDB Configuration
+#
+mongo.db.host=${MONGO_DB_HOST:localhost}:27017
+mongo.db.database=${MONGO_DB_DATABASE:tests}
+mongo.db.collection=${MONGO_DB_COLLECTION:products}
 #
 # Swagger
 #
 quarkus.swagger-ui.enable=true
 quarkus.swagger-ui.always-include=true
 quarkus.swagger-ui.path=/api
+#quarkus.smallrye-openapi.path=/openapi
