commit with the consumer and producer "working"

--- a/camel-quarkus-kafka-consumer/src/main/resources/application.properties
+++ b/camel-quarkus-kafka-consumer/src/main/resources/application.properties
@@ -12,8 +12,7 @@ mongo.db.collection=${MONGO_DB_COLLECTION:products}
 #
 # Swagger
 #
-quarkus.swagger-ui.enable=true
-quarkus.swagger-ui.always-include=true
-quarkus.swagger-ui.path=/api
-quarkus.http.non-application-root-path=/
+#quarkus.swagger-ui.enable=true
+#quarkus.swagger-ui.always-include=true
+#quarkus.swagger-ui.path=/api
 #quarkus.smallrye-openapi.path=/openapi
