--- a/camel-quarkus-kafka-consumer/src/main/resources/application.properties
+++ b/camel-quarkus-kafka-consumer/src/main/resources/application.properties
@@ -3,6 +3,7 @@
 #
 kafka.bootstrap.servers=${KAFKA_BOOTSTRAP_SERVERS:10.8.109.244}:9092
 kafka.topic=${KAFKA_TOPIC:products}
+kafka.group.id=${KAFKA_GROUP_ID:productsConsumerGroup}
 #
 # MongoDB Configuration
 #
@@ -16,3 +17,4 @@ mongo.db.collection=${MONGO_DB_COLLECTION:products}
 #quarkus.swagger-ui.always-include=true
 #quarkus.swagger-ui.path=/api
 #quarkus.smallrye-openapi.path=/openapi
+quarkus.http.port=8090
