mongo username and password updated

--- a/camel-quarkus-kafka-api/src/main/resources/application.properties
+++ b/camel-quarkus-kafka-api/src/main/resources/application.properties
@@ -9,6 +9,8 @@ kafka.topic=${KAFKA_TOPIC:products}
 mongo.db.host=${MONGO_DB_HOST:localhost}:27017
 mongo.db.database=${MONGO_DB_DATABASE:tests}
 mongo.db.collection=${MONGO_DB_COLLECTION:products}
+mongo.db.username=${MONGO_DB_USERNAME:user}
+mongo.db.password=${MONGO_DB_PASSWORD:123456}
 #
 # Swagger
 #
