--- a/camel-quarkus-kafka-consumer/src/main/resources/application.properties
+++ b/camel-quarkus-kafka-consumer/src/main/resources/application.properties
@@ -10,6 +10,8 @@ kafka.group.id=${KAFKA_GROUP_ID:productsConsumerGroup}
 mongo.db.host=${MONGO_DB_HOST:localhost}:27017
 mongo.db.database=${MONGO_DB_DATABASE:tests}
 mongo.db.collection=${MONGO_DB_COLLECTION:products}
+mongo.db.username=${MONGO_DB_USERNAME:user}
+mongo.db.password=${MONGO_DB_PASSWORD:123456}
 #
 # Swagger
 #
