add deploy on ocp

--- a/camel-quarkus-kafka-api/src/main/resources/application.properties
+++ b/camel-quarkus-kafka-api/src/main/resources/application.properties
@@ -19,3 +19,9 @@ quarkus.swagger-ui.always-include=true
 quarkus.swagger-ui.path=/api
 quarkus.http.non-application-root-path=/
 #quarkus.smallrye-openapi.path=/openapi
+#
+# Openshift
+#
+quarkus.kubernetes-client.trust-certs=true
+quarkus.s2i.base-jvm-image=registry.access.redhat.com/ubi8/openjdk-11
+quarkus.openshift.expose=true
