--- a/camel-quarkus-kafka-consumer/src/main/resources/application.properties
+++ b/camel-quarkus-kafka-consumer/src/main/resources/application.properties
@@ -20,3 +20,9 @@ mongo.db.password=${MONGO_DB_PASSWORD:123456}
 #quarkus.swagger-ui.path=/api
 #quarkus.smallrye-openapi.path=/openapi
 quarkus.http.port=8090
+#
+# Openshift
+#
+quarkus.kubernetes-client.trust-certs=true
+quarkus.s2i.base-jvm-image=registry.access.redhat.com/ubi8/openjdk-11
+quarkus.openshift.expose=true
