dev file ajusts part 2

--- a/devfile/camel-quarkus-kafka-api-devfile.yaml
+++ b/devfile/camel-quarkus-kafka-api-devfile.yaml
@@ -40,7 +40,7 @@ components:
         name: MONGO_DB_HOST
       - value: admin
         name: MONGO_DB_USERNAME
-      - value: 123456
+      - value: '123456'
         name: MONGO_DB_PASSWORD
       - value: $(JAVA_OPTS)
         name: MAVEN_OPTS
