--- a/devfile/camel-quarkus-kafka-api-devfile.yaml
+++ b/devfile/camel-quarkus-kafka-api-devfile.yaml
@@ -50,6 +50,9 @@ components:
     type: chePlugin
   - id: redhat/quarkus-java11/latest
     type: chePlugin
+  - id: redhat/vscode-openshift-connector/latest
+    type: chePlugin
+    alias: vscode-openshift
 commands:
   - name: 1. Package the application (Camel Quarkus Kafka API)
     actions:
