--- a/camel-quarkus-kafka-api/src/main/resources/application.properties
+++ b/camel-quarkus-kafka-api/src/main/resources/application.properties
@@ -25,3 +25,4 @@ quarkus.http.non-application-root-path=/
 quarkus.kubernetes-client.trust-certs=true
 quarkus.s2i.base-jvm-image=registry.access.redhat.com/ubi8/openjdk-11
 quarkus.openshift.expose=true
+quarkus.openshift.deploy=true
