--- a/camel-quarkus-kafka-consumer/src/main/resources/application.properties
+++ b/camel-quarkus-kafka-consumer/src/main/resources/application.properties
@@ -26,3 +26,4 @@ quarkus.http.port=8090
 quarkus.kubernetes-client.trust-certs=true
 quarkus.s2i.base-jvm-image=registry.access.redhat.com/ubi8/openjdk-11
 quarkus.openshift.expose=true
+quarkus.openshift.deploy-true
