infinispan API funcional

--- a/camel-quarkus-oracle-api/src/main/resources/application.properties
+++ b/camel-quarkus-oracle-api/src/main/resources/application.properties
@@ -4,11 +4,16 @@
 quarkus.openshift.env.vars.quarkus-datasource-db-kind=${QUARKUS_DATASOURCE_DB_KIND:oracle}
 quarkus.openshift.env.vars.quarkus-datasource-username=${QUARKUS_DATASOURCE_USERNAME:ot}
 quarkus.openshift.env.vars.quarkus-datasource-password=${QUARKUS_DATASOURCE_PASSWORD:Orcl1234}
-quarkus.openshift.env.vars.quarkus-datasource-jdbc-url=jdbc:oracle:thin:@//${QUARKUS_DATASOURCE_JDBC_URL:localhost:35977/ABCPDB1}
+quarkus.openshift.env.vars.quarkus-datasource-jdbc-url=jdbc:oracle:thin:@//${QUARKUS_DATASOURCE_JDBC_URL:oracle19c:1521/ABCPDB1}
 quarkus.datasource.db.kind=${QUARKUS_DATASOURCE_DB_KIND:oracle}
 quarkus.datasource.username=${QUARKUS_DATASOURCE_USERNAME:ot}
 quarkus.datasource.password=${QUARKUS_DATASOURCE_PASSWORD:Orcl1234}
-quarkus.datasource.jdbc.url=jdbc:oracle:thin:@//${QUARKUS_DATASOURCE_JDBC_URL:localhost:35977/ABCPDB1}
+quarkus.datasource.jdbc.url=jdbc:oracle:thin:@//${QUARKUS_DATASOURCE_JDBC_URL:oracle19c:1521/ABCPDB1}
+
+#
+#LifeSpanTime
+#
+quarkus.openshift.env.vars.life-span-time=${LIFE_SPAN_TIME:60}
 #
 # Swagger
 #
