--- a/camel-quarkus-artemis-consumer/src/main/resources/application.properties
+++ b/camel-quarkus-artemis-consumer/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #
 # Artemis Configuration
 #
-quarkus.openshift.env.vars.quarkus-artemis-url=tcp://${QUARKUS_ARTEMIS_URL:amq-broker-hdls-svc:61616}
+quarkus.openshift.env.vars.quarkus-artemis-url=tcp://${QUARKUS_ARTEMIS_URL:ex-aao-hdls-svc:61616}
 quarkus.openshift.env.vars.quarkus-artemis-username=${QUARKUS_ARTEMIS_USERNAME:admin}
 quarkus.openshift.env.vars.quarkus-artemis-password=${QUARKUS_ARTEMIS_PASSWORD:123456}
 quarkus.openshift.env.vars.quarkus-artemis-destinationType=${QUARKUS_ARTEMIS_DESTINATION_TYPE:topic}
