--- a/camel-quarkus-ws-to-event-artemis/src/main/resources/application.properties
+++ b/camel-quarkus-ws-to-event-artemis/src/main/resources/application.properties
@@ -1,20 +1,43 @@
 #
 # Artemis Configuration
 #
-quarkus.openshift.env.vars.quarkus-artemis-url=tcp://${QUARKUS_ARTEMIS_URL:amq-broker-hdls-svc:61616}
+quarkus.openshift.env.vars.quarkus-artemis-url=tcp://${QUARKUS_ARTEMIS_URL:ex-aao-hdls-svc:61616}
 quarkus.openshift.env.vars.quarkus-artemis-username=${QUARKUS_ARTEMIS_USERNAME:admin}
 quarkus.openshift.env.vars.quarkus-artemis-password=${QUARKUS_ARTEMIS_PASSWORD:123456}
 quarkus.openshift.env.vars.quarkus-artemis-destinationType=${QUARKUS_ARTEMIS_DESTINATION_TYPE:topic}
 quarkus.openshift.env.vars.quarkus-artemis-destinationName-raw=${QUARKUS_ARTEMIS_DESTINATION_NAME_RAW:chat-bot-raw}
 quarkus.openshift.env.vars.quarkus-artemis-destinationName-processed=${QUARKUS_ARTEMIS_DESTINATION_NAME_PROCESSED:chat-bot-processed}
+camel.component.activemq.use-pooled-connection=true
+camel.component.activemq.disable-reply-to=true
+camel.component.activemq.disable-time-to-live=true
+#
+# Vert.x Configuration
+#
+#quarkus.vertx.eventbus.connect-timeout=120S
+#quarkus.http.io-threads=20
+#quarkus.http.read-timeout=120S
+#quarkus.vertx.max-event-loop-execute-time=60S
+#quarkus.http.limits.max-connections=100000
+#quarkus.http.idle-timeout=30M
+#
+# Paho
+#
+# URL to the Broker
+camel.component.paho-mqtt5.broker-url=${QUARKUS_ARTEMIS_URL:ex-aao-hdls-svc:61616}
+# username for the broker, leave empty if no username is needed
+camel.component.paho-mqtt5.user-name=${QUARKUS_ARTEMIS_USERNAME:admin}
+camel.component.paho-mqtt5.password=${QUARKUS_ARTEMIS_PASSWORD:123456}
+camel.component.paho-mqtt5.https-hostname-verification-enabled=false
+camel.component.paho-mqtt5.qos=0
 #
 # Swagger
 #
-#quarkus.swagger-ui.enable=true
-#quarkus.swagger-ui.always-include=true
-#quarkus.swagger-ui.path=/api
+quarkus.swagger-ui.enable=true
+quarkus.swagger-ui.always-include=true
+quarkus.swagger-ui.path=/api
+quarkus.http.non-application-root-path=/
 #quarkus.smallrye-openapi.path=/openapi
-quarkus.http.port=8090
+quarkus.http.port=8080
 #
 # Openshift
 #
