--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
     "java.configuration.updateBuildConfiguration": "interactive",
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "/Users/omelo/Library/Application Support/Code/User/globalStorage/redhat.vscode-camelk/java-dependencies-3.14.1/dependencies/*.jar"
+        "/Users/omelo/Library/Application Support/Code/User/globalStorage/redhat.vscode-camelk/java-dependencies-3.14.1/dependencies/*.jar",
+        "/Users/omelo/Library/Application Support/Code/User/globalStorage/redhat.vscode-camelk/java-dependencies-3.16.0/dependencies/*.jar"
     ],
     "java.jdt.ls.vmargs": "-XX:+UseParallelGC -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90 -Dsun.zip.disableMemoryMapping=true -Xmx2G -Xms100m"
 }
