--- a/camel-quarkus-infinispan-api/src/main/resources/application.properties
+++ b/camel-quarkus-infinispan-api/src/main/resources/application.properties
@@ -1,24 +1,24 @@
 #
 # Openshift env vars
 #
-quarkus.openshift.env.vars.infinispan-client-server-list=${INFINISPAN_CLIENT_SERVER_LIST:localhost:11222}
+quarkus.openshift.env.vars.infinispan-client-server-list=${INFINISPAN_CLIENT_SERVER_LIST:rhdg:11222}
 quarkus.openshift.env.vars.cache-name=${CACHE_NAME:keys}
 quarkus.openshift.env.vars.infinispan-client-use-auth=${INFINISPAN_CLIENT_USE_AUTH:true}
-quarkus.openshift.env.vars.infinispan-client-auth-username=${INFINISPAN_CLIENT_AUTH_USERNAME:admin}
-quarkus.openshift.env.vars.infinispan-client-auth-password=${INFINISPAN_CLIENT_AUTH_PASSWORD:password}
+quarkus.openshift.env.vars.infinispan-client-auth-username=${INFINISPAN_CLIENT_AUTH_USERNAME:developer}
+quarkus.openshift.env.vars.infinispan-client-auth-password=${INFINISPAN_CLIENT_AUTH_PASSWORD:developer}
 quarkus.openshift.env.vars.infinispan-client-client-intelligence=${INFINISPAN_CLIENT_CLIENT_INTELLIGENCE:BASIC}
 #
 # Rest Api Configuration
 #
-quarkus.openshift.env.vars.rest-api=${REST_API:http://camel-quarkus-oracle-api-datagrid-quarkus.apps.cluster-zr9p2.zr9p2.sandbox661.opentlc.com/}
+quarkus.openshift.env.vars.rest-api=${REST_API:http://camel-quarkus-postgres-api-datagrid.18.229.202.29.nip.io//}
 #
 # Infinispan
 #
-quarkus.infinispan-client.server-list=${INFINISPAN_CLIENT_SERVER_LIST:localhost:11222}
+quarkus.infinispan-client.server-list=${INFINISPAN_CLIENT_SERVER_LIST:rhdg:11222}
 # Infinispan Authentication
 quarkus.infinispan-client.use-auth=${INFINISPAN_CLIENT_USE_AUTH:true}
-quarkus.infinispan-client.auth-username=${INFINISPAN_CLIENT_AUTH_USERNAME:admin}
-quarkus.infinispan-client.auth-password=${INFINISPAN_CLIENT_AUTH_PASSWORD:password}
+quarkus.infinispan-client.auth-username=${INFINISPAN_CLIENT_AUTH_USERNAME:developer}
+quarkus.infinispan-client.auth-password=${INFINISPAN_CLIENT_AUTH_PASSWORD:developer}
 # Infinispan client intelligence
 # Use BASIC as a Docker for Mac workaround
 quarkus.infinispan-client.client-intelligence=${INFINISPAN_CLIENT_CLIENT_INTELLIGENCE:BASIC}
